; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_stop_dpm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/powerplay/hwmgr/extr_smu8_hwmgr.c_smu8_stop_dpm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pp_hwmgr = type { %struct.smu8_hwmgr* }
%struct.smu8_hwmgr = type { i32 }

@DPMFlags_SCLK_Enabled = common dso_local global i32 0, align 4
@SCLK_DPM_MASK = common dso_local global i64 0, align 8
@PPSMC_MSG_DisableAllSmuFeatures = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pp_hwmgr*)* @smu8_stop_dpm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu8_stop_dpm(%struct.pp_hwmgr* %0) #0 {
  %2 = alloca %struct.pp_hwmgr*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.smu8_hwmgr*, align 8
  %5 = alloca i64, align 8
  store %struct.pp_hwmgr* %0, %struct.pp_hwmgr** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %7 = getelementptr inbounds %struct.pp_hwmgr, %struct.pp_hwmgr* %6, i32 0, i32 0
  %8 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %7, align 8
  store %struct.smu8_hwmgr* %8, %struct.smu8_hwmgr** %4, align 8
  store i64 0, i64* %5, align 8
  %9 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %4, align 8
  %10 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @DPMFlags_SCLK_Enabled, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %29

15:                                               ; preds = %1
  %16 = load i64, i64* @SCLK_DPM_MASK, align 8
  %17 = load i64, i64* %5, align 8
  %18 = or i64 %17, %16
  store i64 %18, i64* %5, align 8
  %19 = load i32, i32* @DPMFlags_SCLK_Enabled, align 4
  %20 = xor i32 %19, -1
  %21 = load %struct.smu8_hwmgr*, %struct.smu8_hwmgr** %4, align 8
  %22 = getelementptr inbounds %struct.smu8_hwmgr, %struct.smu8_hwmgr* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = and i32 %23, %20
  store i32 %24, i32* %22, align 4
  %25 = load %struct.pp_hwmgr*, %struct.pp_hwmgr** %2, align 8
  %26 = load i32, i32* @PPSMC_MSG_DisableAllSmuFeatures, align 4
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @smum_send_msg_to_smc_with_parameter(%struct.pp_hwmgr* %25, i32 %26, i64 %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %15, %1
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @smum_send_msg_to_smc_with_parameter(%struct.pp_hwmgr*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
